ci: Fix the Publish to Docker Hub workflow for good (#3689)
I didn't have the time to fully test the changes made
https://github.com/electric-sql/electric/pull/3650 before I decided to
merge it to (hopefully) fix a problem with our cloud deployments. The
lack of testing has left us with a series of issues in the new workflow.

In this branch, I'm testing the workflow by letting it run all the way
through. Only once it's proven to do what it has been designed to do
will it be merged.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* Sync-service Docker images are automatically published to Docker Hub
when a sync-service release is published.
* Cloud infrastructure update is triggered automatically when a new
Electric release is published.

* **Improvements**
* Release workflow now coordinates package publishing and Docker image
publishing, with explicit release vs canary tagging.
* Docker repository names are configurable via environment and the
workflow uses the built-in release token.

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/workflows/changesets_release.yml
+++ b/.github/workflows/changesets_release.yml
@@ -18,10 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       published: ${{ steps.changesets.outputs.published }}
+      sync_service_release_tag: ${{ steps.sync_service_release_tag.outputs.tag }}
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
@@ -43,8 +43,17 @@ jobs:
           publish: pnpm ci:publish
           title: 'chore: publish new package versions'
         env:
-          GITHUB_TOKEN: ${{ secrets.OLEKSII_PAT_TOKEN_FOR_DOCKERHUB_RELEASE_WORKFLOW }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
+      - name: Capture the new sync-service release as an output (if any)
+        id: sync_service_release_tag
+        if: steps.changesets.outputs.published == 'true'
+        run: |
+          # Assign publishedPackages to a variable first to avoid any interpretation of JSON special chars by the shell
+          PUBLISHED_PACKAGES='${{ steps.changesets.outputs.publishedPackages }}'
+          # Use jq to pick the relevant package from the JSON array and format it into a <package>@<version> output
+          TAGS=$(echo "$PUBLISHED_PACKAGES" | jq -r '.[] | select(.name == "@core/sync-service") | .name + "@" + .version')
+          echo "tag=$TAGS" >> "$GITHUB_OUTPUT"
       - name: Add latest tag to published packages
         if: steps.changesets.outputs.published == 'true'
         run: node scripts/tag-latest.mjs
@@ -54,6 +63,15 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISHED_PACKAGES: ${{ steps.changesets.outputs.publishedPackages }}
+
+  publish-to-dockerhub:
+    needs: changesets
+    if: ${{ needs.changesets.outputs.published == 'true' && needs.changesets.outputs.sync_service_release_tag  != '' }}
+    uses: ./.github/workflows/sync_service_dockerhub_image.yml
+    secrets: inherit
+    with:
+      release_tag: ${{ needs.changesets.outputs.sync_service_release_tag }}
+
   update-cloud:
     name: Update Electric version used by Cloud
     runs-on: ubuntu-latest
@@ -61,7 +79,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
       # Get the Electric version of the Docker image
       - name: Get Electric version
