--- a/website/package.json
+++ b/website/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.4",
   "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
     "api:build_docs": "redocly build-docs ./electric-api.yaml --output=./public/openapi.html",
     "api:generate": "npm run api:build_docs && npm run api:patch_version",
     "api:patch_version": "node ../scripts/patch_api_spec_version.js ./public/openapi.html",
@@ -21,6 +23,7 @@
     "vitepress": "^1.3.1",
     "vitepress-plugin-llms": "^1.7.5",
     "vitepress-plugin-tabs": "^0.5.0",
+    "vitest": "^4.0.15",
     "vue-tweet": "^2.3.1",
     "yaml": "^2.5.0"
   },
