--- a/website/package.json
+++ b/website/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.4",
   "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
     "api:build_docs": "redocly build-docs ./electric-api.yaml --output=./public/openapi.html",
     "api:generate": "npm run api:build_docs && npm run api:patch_version",
     "api:patch_version": "node ../scripts/patch_api_spec_version.js ./public/openapi.html",
     "api:watch": "nodemon -w ./ -x \"npm run api:generate\" -e \"electric-api.yaml\"",
     "build": "npm run api:generate && vitepress build . && cp ../AGENTS.md .vitepress/dist",
     "dev": "vitepress dev .",
+    "dev:netlify": "netlify dev",
     "preview": "vitepress preview ."
   },
   "engineManager": "^pnpm@9.15.0",
@@ -20,11 +23,11 @@
     "vitepress": "^1.3.1",
     "vitepress-plugin-llms": "^1.7.5",
     "vitepress-plugin-tabs": "^0.5.0",
+    "vitest": "^4.0.15",
     "vue-tweet": "^2.3.1",
     "yaml": "^2.5.0"
   },
   "dependencies": {
-    "@unpic/vue": "^1.0.0",
     "posthog-js": "^1.236.4"
   }
 }
