fix(ci): improve ref derivation in docker publish workflow
Replaces reliance on github.event_name with explicit input and payload
checks. This ensures the workflow correctly identifies release intent
when called via workflow_call, as event_name is inherited from the
caller ('push' in our case, because the changesets_release.yml workflow
is triggered by a push to main).

--- a/.github/workflows/sync_service_dockerhub_image.yml
+++ b/.github/workflows/sync_service_dockerhub_image.yml
@@ -1,7 +1,7 @@
 name: Publish Electric images to Docker Hub
 
 # If you decide to modify the list of triggers for this action, don't forget to also update the
-# conditional logic based on ${{ github.event_name }} in the derive_build_vars job.
+# conditional logic in the derive_build_vars job below.
 on:
   push:
     branches: ['main']
@@ -40,22 +40,16 @@ jobs:
       - name: Determine the ref to check out
         id: git_ref
         run: |
-          case ${{ github.event_name }} in
-            push)
-              ref="${{ github.sha }}"
-              is_release=false
-              ;;
-
-            release)
-              ref="refs/tags/${{ github.event.release.tag_name }}"
-              is_release=true
-              ;;
-
-            workflow_dispatch | workflow_call)
-              ref="refs/tags/${{ inputs.release_tag }}"
-              is_release=true
-              ;;
-          esac
+          if [ -n "${{ inputs.release_tag }}" ]; then
+            ref="refs/tags/${{ inputs.release_tag }}"
+            is_release=true
+          elif [ -n "${{ github.event.release.tag_name }}" ]; then
+            ref="refs/tags/${{ github.event.release.tag_name }}"
+            is_release=true
+          else
+            ref="${{ github.sha }}"
+            is_release=false
+          fi
 
           echo "git_ref=$ref" >> $GITHUB_OUTPUT
           echo "is_release=$is_release" >> $GITHUB_OUTPUT
