ci(sync-service): trigger workflow when workflow file is modified

--- a/.github/workflows/sync_service_tests.yml
+++ b/.github/workflows/sync_service_tests.yml
@@ -6,10 +6,12 @@ on:
     paths:
       - 'packages/electric-telemetry/**'
       - 'packages/sync-service/**'
+      - '.github/workflows/sync_service_tests.yml'
   pull_request:
     paths:
       - 'packages/electric-telemetry/**'
       - 'packages/sync-service/**'
+      - '.github/workflows/sync_service_tests.yml'
 
 permissions:
   contents: read
