--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.7",
     "nodemon": "^3.1.4",
     "pnpm": "^9.15.0",
+    "shiki": "^3.21.0",
     "vitepress": "^1.3.1",
     "vitepress-plugin-llms": "^1.7.5",
     "vitepress-plugin-tabs": "^0.5.0",
