--- a/examples/tanstack-db-web-starter/package.json
+++ b/examples/tanstack-db-web-starter/package.json
@@ -39,7 +39,7 @@
     "drizzle-orm": "^0.39.0",
     "drizzle-zod": "^0.7.1",
     "lucide-react": "^0.544.0",
-    "nitro": "latest",
+    "nitro": "3.0.1-alpha.1",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
